cvs/ports/net/iplog/Makefile,v
head	1.13;
access;
symbols
	OPENBSD_6_1:1.11.0.8
	OPENBSD_6_1_BASE:1.11
	OPENBSD_6_0:1.11.0.6
	OPENBSD_6_0_BASE:1.11
	OPENBSD_5_9:1.11.0.2
	OPENBSD_5_9_BASE:1.11
	OPENBSD_5_8:1.11.0.4
	OPENBSD_5_8_BASE:1.11
	OPENBSD_5_7:1.10.0.8
	OPENBSD_5_7_BASE:1.10
	OPENBSD_5_6:1.10.0.6
	OPENBSD_5_6_BASE:1.10
	OPENBSD_5_5:1.10.0.4
	OPENBSD_5_5_BASE:1.10
	OPENBSD_5_4:1.10.0.2
	OPENBSD_5_4_BASE:1.10
	OPENBSD_5_3:1.9.0.4
	OPENBSD_5_3_BASE:1.9
	OPENBSD_5_2:1.9.0.2
	OPENBSD_5_2_BASE:1.9
	OPENBSD_5_1_BASE:1.8
	OPENBSD_5_1:1.8.0.6
	OPENBSD_5_0:1.8.0.4
	OPENBSD_5_0_BASE:1.8
	OPENBSD_4_9:1.8.0.2
	OPENBSD_4_9_BASE:1.8
	OPENBSD_4_8:1.7.0.12
	OPENBSD_4_8_BASE:1.7
	OPENBSD_4_7:1.7.0.10
	OPENBSD_4_7_BASE:1.7
	OPENBSD_4_6:1.7.0.8
	OPENBSD_4_6_BASE:1.7
	OPENBSD_4_5:1.7.0.6
	OPENBSD_4_5_BASE:1.7
	OPENBSD_4_4:1.7.0.4
	OPENBSD_4_4_BASE:1.7
	OPENBSD_4_3:1.7.0.2
	OPENBSD_4_3_BASE:1.7
	OPENBSD_4_2:1.6.0.12
	OPENBSD_4_2_BASE:1.6
	OPENBSD_4_1:1.6.0.10
	OPENBSD_4_1_BASE:1.6
	OPENBSD_4_0:1.6.0.8
	OPENBSD_4_0_BASE:1.6
	OPENBSD_3_9:1.6.0.6
	OPENBSD_3_9_BASE:1.6
	OPENBSD_3_8:1.6.0.4
	OPENBSD_3_8_BASE:1.6
	OPENBSD_3_7:1.6.0.2
	OPENBSD_3_7_BASE:1.6
	OPENBSD_3_6:1.5.0.8
	OPENBSD_3_6_BASE:1.5
	OPENBSD_3_5:1.5.0.6
	OPENBSD_3_5_BASE:1.5
	OPENBSD_3_4:1.5.0.4
	OPENBSD_3_4_BASE:1.5
	OPENBSD_3_3:1.5.0.2
	OPENBSD_3_3_BASE:1.5
	OPENBSD_3_2:1.4.0.2
	OPENBSD_3_2_BASE:1.4
	OPENBSD_3_1:1.3.0.6
	OPENBSD_3_1_BASE:1.3
	OPENBSD_3_0:1.3.0.4
	OPENBSD_3_0_BASE:1.3
	OPENBSD_2_9_TRACKING_SWITCH:1.3
	OPENBSD_2_9:1.3.0.2
	OPENBSD_2_9_BASE:1.3
	danh_2000-Jan-05:1.1.1.1
	danh:1.1.1;
locks; strict;
comment	@# @;


1.13
date	2017.09.25.09.16.13;	author robert;	state Exp;
branches;
next	1.12;
commitid	xOeDnABBxynvFYIF;

1.12
date	2017.05.07.20.25.32;	author schwarze;	state Exp;
branches;
next	1.11;
commitid	7OsCjTlH2g21GN3t;

1.11
date	2015.05.17.11.42.17;	author sthen;	state Exp;
branches;
next	1.10;
commitid	v49maoVxxr02EHti;

1.10
date	2013.03.11.11.35.48;	author espie;	state Exp;
branches;
next	1.9;

1.9
date	2012.03.29.13.38.48;	author sthen;	state Exp;
branches;
next	1.8;

1.8
date	2010.10.18.18.36.48;	author espie;	state Exp;
branches;
next	1.7;

1.7
date	2007.09.15.22.36.54;	author merdely;	state Exp;
branches;
next	1.6;

1.6
date	2004.12.16.00.31.22;	author alek;	state Exp;
branches;
next	1.5;

1.5
date	2002.12.29.21.14.11;	author fgsch;	state Exp;
branches;
next	1.4;

1.4
date	2002.05.15.17.42.24;	author espie;	state Exp;
branches;
next	1.3;

1.3
date	2001.04.12.15.59.15;	author bmc;	state Exp;
branches;
next	1.2;

1.2
date	2001.01.18.02.21.02;	author danh;	state Exp;
branches;
next	1.1;

1.1
date	2001.01.05.10.16.18;	author danh;	state Exp;
branches
	1.1.1.1;
next	;

1.1.1.1
date	2001.01.05.10.16.18;	author danh;	state Exp;
branches;
next	;


desc
@@


1.13
log
@Unbreak autoconf checks with clang by not using nested functions
in the checks.

Someone clearly did not read the autoconf documentation because
using the following functions with a function declaration inside
the body will end up declaring a function inside a function.

- AC_TRY_COMPILE( [], [ int main() { return 0; } ],
- AC_LANG_PROGRAM([[]], [[int main (void) { return 0; }]])],
- AC_TRY_LINK([], [int main (void) { return 0; }],

Result:

int
main ()
{
int main (void) { return 0; }
  ;
  return 0;
}

nested functions is a gcc extension which is not supported by
clang.

test.c:4:17: error: function definition is not allowed here
int main (void) { return 0; }
                ^
1 error generated.

This causes tests to fail in the configure scripts resulting in
missing compile and link time flags from the builds.

This resulted in weird behaviour of several software, like gnome
hanging completely due to gtk+3 not being built properly.

This change intrudces the following fixes:

- remove int main() declaration from AC_TRY_COMPILE, AC_LANG_PROGRAM, AC_TRY_LINK
  as it comes with a declaration already, and people misused them

- change to use AC_LANG_SOURCE when needed in case a complete source block is specified

Most of the changes are in configure.(ac|in), however there were some cases
where autoconf is either broken or the build failed because of an autoconf
generated configure script. Everytihng else is switched to autoconf, so
the maintainers can go ahead and upstream these diffs.

There are more to come, we are continously checking the tree for these issues
and in the future the infrastructure will error if such a case is found.
@
text
@# $OpenBSD: Makefile,v 1.12 2017/05/07 20:25:32 schwarze Exp $

COMMENT=	TCP/IP traffic logging tool

DISTNAME=	iplog-2.2.3
REVISION=	2
CATEGORIES=	net security
MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=ojnk/}

HOMEPAGE=	http://ojnk.sourceforge.net

PERMIT_PACKAGE_CDROM=	Yes
WANTLIB=		c pcap pthread

USE_GMAKE=	Yes
SEPARATE_BUILD=	Yes
CONFIGURE_STYLE= gnu

post-install:
	${INSTALL_DATA_DIR} ${PREFIX}/share/examples/iplog
	${INSTALL_DATA} ${WRKSRC}/example-iplog.conf \
		${PREFIX}/share/examples/iplog/iplog.conf

.include <bsd.port.mk>
@


1.12
log
@mandoc supports .ta now, so drop USE_GROFF and bump
@
text
@d1 1
a1 1
# $OpenBSD: Makefile,v 1.11 2015/05/17 11:42:17 sthen Exp $
d6 1
a6 1
REVISION=	1
@


1.11
log
@reset maintainer, bouncing mail - pointed out by jasper@@
@
text
@d1 1
a1 1
# $OpenBSD: Makefile,v 1.10 2013/03/11 11:35:48 espie Exp $
d6 1
a6 1
REVISION=	0
a15 1
USE_GROFF =	Yes
@


1.10
log
@PERMIT_* / REGRESS->TEST sweep
@
text
@d1 1
a1 1
# $OpenBSD: Makefile,v 1.9 2012/03/29 13:38:48 sthen Exp $
d6 1
a10 2

MAINTAINER=	Brian Caswell <bmc@@openbsd.org>
@


1.9
log
@Change SEPARATE_BUILD=(concurrent|simple) to Yes; bsd.port.mk doesn't
make a distinction between these.  ok aja@@ dcoppa@@
@
text
@d1 1
a1 1
# $OpenBSD: Makefile,v 1.8 2010/10/18 18:36:48 espie Exp $
a13 3
PERMIT_PACKAGE_FTP=	Yes
PERMIT_DISTFILES_CDROM=	Yes
PERMIT_DISTFILES_FTP=	Yes
@


1.8
log
@USE_GROFF=Yes
@
text
@d1 1
a1 1
# $OpenBSD: Makefile,v 1.7 2007/09/15 22:36:54 merdely Exp $
d21 1
a21 1
SEPARATE_BUILD=	concurrent
@


1.7
log
@Remove surrounding quotes in COMMENT*/PERMIT_*/BROKEN/ERRORS

Add $OpenBSD$ to p5-SNMP-Info/Makefile (ok kili@@, simon@@)
@
text
@d1 1
a1 1
# $OpenBSD: Makefile,v 1.6 2004/12/16 00:31:22 alek Exp $
d20 1
@


1.6
log
@Add WANTLIB markers
@
text
@d1 1
a1 1
# $OpenBSD: Makefile,v 1.5 2002/12/29 21:14:11 fgsch Exp $
d3 1
a3 1
COMMENT=	"TCP/IP traffic logging tool"
@


1.5
log
@finally, no more NEED_VERSION.
@
text
@d1 1
a1 1
# $OpenBSD: Makefile,v 1.4 2002/05/15 17:42:24 espie Exp $
d17 1
@


1.4
log
@say goodbye to MASTER_SITE_SUBDIR
@
text
@d1 1
a1 1
# $OpenBSD: Makefile,v 1.3 2001/04/12 15:59:15 bmc Exp $
a6 1
NEED_VERSION=	1.394
@


1.3
log
@

* integrated COMMENT
* bumped NEED_VERSION
* updated my address

ok obecian@@
@
text
@d1 1
a1 1
# $OpenBSD: Makefile,v 1.2 2001/01/18 02:21:02 danh Exp $
d8 1
a8 2
MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
MASTER_SITE_SUBDIR= ojnk
@


1.2
log
@update to iplog 2.2.3 from maintainer
@
text
@d1 3
a3 1
# $OpenBSD: Makefile,v 1.1.1.1 2001/01/05 10:16:18 danh Exp $
d7 1
a7 1
NEED_VERSION=	1.351
d13 1
a13 1
MAINTAINER=	Brian Caswell <bmc@@mitre.org>
@


1.1
log
@Initial revision
@
text
@d1 1
a1 1
# $OpenBSD$
d3 1
a3 1
DISTNAME=	iplog-2.2.2
d5 1
a5 1
NEED_VERSION=	1.348
@


1.1.1.1
log
@TCP/IP traffic logging tool

Submitted by:	Brian Caswell <bmc@@mitre.org>
@
text
@@
